--- a/ui-event-ticketing-system-R4shad/src/App.css
+++ b/ui-event-ticketing-system-R4shad/src/App.css
@@ -5,19 +5,23 @@
   text-align: center;
 }
 
-.event-container {
+.card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 16px;
   padding: 16px;
+  justify-items: center;
 }
-.event {
+.card {
   width: 200px;
   background-color: grey;
   border-radius: 8px;
 }
-.event-image {
-  width: 50px;
+.card-image {
+  width: 150px;
   height: auto;
   margin-top: 16px;
+}
+.p-name {
+  font-weight: 700;
 }
