frontend-fix: Fix buy form styles and event detailed

--- a/ui-event-ticketing-system-R4shad/src/components/EventDetailed.css
+++ b/ui-event-ticketing-system-R4shad/src/components/EventDetailed.css
@@ -1,7 +1,13 @@
 .event-container {
-  display: grid;
+  display: flex;
+  width: 80%;
+  margin: 2rem;
 }
 .detailed-img {
   width: 200px;
   height: auto;
+  padding: 1rem;
+}
+.text-aside {
+  text-align: justify;
 }
